# cob_webapp

./: .env  README.md  docker-compose.yml
.komment/: .gitkeep
backend/: .gitignore  Dockerfile  pyproject.toml
backend/src/: __init__.py  crud.py  data_processor.py  database.py  main.py  models.py  routes.py  schemas.py
backend/tests/unit/: test_data_processor.py
backend/tests/unit/mock_data/: cob_api_response.json
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  backendServices.js  index.css  utils.js
frontend/src/components/: LineChart.js  RefreshButton.js
